tests/models/enum/named/vec/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        Vec<()>
    ),
}
fn main() {}
